force-app/main/default/objects/smagicinteract__SMS_Template__c/smagicinteract__SMS_Template__c.object-meta.xml
<CustomObject>
    <customHelpPage>smagicinteract__SMSMagicHelp</customHelpPage>
    <description>SMS Template is similar to Email template, it gives way to add personalization to bulk sms&apos;ing.</description>
    <label>Converse Template</label>
    <nameField>
        <displayFormat>ST-{00000000}</displayFormat>
        <label>Converse Template Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Converse Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>