force-app/main/default/objects/smagicinteract__SMS_Template__c/fields/smagicinteract__Alternate_External_Id__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Alternate_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Alternate External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>