force-app/main/default/objects/smagicinteract__SMS_Template__c/fields/smagicinteract__Channel_Specific__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Channel_Specific__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To decide whether the template is tagged to any channel or not.</description>
    <label>Is Channel Specific</label>
    <type>Checkbox</type>
</CustomField>