force-app/main/default/objects/smagicinteract__SMS_Template__c/fields/smagicinteract__ContentType__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__ContentType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>lookup to content type.</description>
    <label>Content Type</label>
    <referenceTo>smagicinteract__ContentType__c</referenceTo>
    <relationshipLabel>Converse Templates</relationshipLabel>
    <relationshipName>Converse_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>