force-app/main/default/objects/smagicinteract__SMS_Template__c/fields/smagicinteract__Description__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Description__c</fullName>
    <description>gives a description of the template.</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>