force-app/main/default/objects/smagicinteract__SMS_Template__c/fields/smagicinteract__Has_Per_Message__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Has_Per_Message__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether per message URL shortening is used in template</description>
    <label>Has Per Message</label>
    <type>Checkbox</type>
</CustomField>