force-app/main/default/objects/smagicinteract__SMS_Template__c/fields/smagicinteract__Name__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Name__c</fullName>
    <description>Name of template</description>
    <label>Name</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>