force-app/main/default/objects/smagicinteract__SMS_Template__c/fields/smagicinteract__ObjectName__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__ObjectName__c</fullName>
    <description>Objects for which templates to be created.</description>
    <label>ObjectName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>