force-app/main/default/objects/smagicinteract__SMS_Template__c/fields/smagicinteract__Text__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Text__c</fullName>
    <description>Text in template</description>
    <label>Text</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>