force-app/main/default/objects/smagicinteract__SMS_Template__c/fields/smagicinteract__URL_Clicks__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__URL_Clicks__c</fullName>
    <label>URL Clicks</label>
    <summarizedField>smagicinteract__Template_Short_Link_Map__c.smagicinteract__URL_Clicks__c</summarizedField>
    <summaryForeignKey>smagicinteract__Template_Short_Link_Map__c.smagicinteract__Template__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>