force-app/main/default/objects/smagicinteract__SMS_Template__c/listViews/smagicinteract__All.listView-meta.xml
<ListView>
    <fullName>smagicinteract__All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>smagicinteract__Name__c</columns>
    <columns>smagicinteract__ObjectName__c</columns>
    <columns>smagicinteract__Text__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>smagicinteract__URL_Clicks__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>